# bazel-frontend

./: BUILD  MODULE.bazel  README.md  data.proto  package.json  pnpm-lock.yaml
