bazel_dep(name = "aspect_rules_js", version = "2.9.2")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm", dev_dependency = True)
use_repo(pnpm, "pnpm")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "pnpm-lock.yaml",
    npmrc = ".npmrc",
)
use_repo(npm, "npm")

